--- a/index.html
+++ b/index.html
@@ -1,25 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-   <meta charset="utf-8">
-   <title>asanaCoach</title>
-   <script scr="script.js"></script>
-   <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>asanaCoach</title>
+  <script scr="script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 
 <body>
-    <div id = "topHeaderRow">
-        <ul>
-            <li><a href="#section1">Section 1: </a></li>
-            <li><a href="#section2">Section 2: </a></li>
-            <li><a href="#section3">Section 3: </a></li>
-            <li><a href="#section4">Section 4: </a></li>
-            <li><a href="#section5">Section 5: </a></li>
-        </ul>
-    </div>
+  <div id = "topHeaderRow">
+    <nav>
+      <ul>
+        <!-- the item in the top and if the user click the words, it will take the user to the currect position -->
+        <li><a href="#section1">Video</a></li>
+        <li><a href="#section2">result</a></li>
+        <li><a href="#section3">Section 3: </a></li>
+        <li><a href="#section4">Section 4: </a></li>
+        <li><a href="#section5">Section 5: </a></li>
+      </ul>
+    </nav>
+  </div>
 
-    <section id="section1">
+  <!-- video taking -->
+  <section id="section1">
+    <div>
+      <h1 id="video_recording">Video Recording</h1>
+      <div class="grid-container">
+        <div class="item1">
+          <!-- taking video -->
+          <video id="cameraStream" autoplay playsinline muted></video>
+        </div>
+        <div class="item2">
+          <!-- give the example that what should user to do -->
+          <iframe id="video1" width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0"></iframe>
+        </div>
+        <div class="item3">
+          <!-- the video that the user recorded -->
+          <video id="recordedVideo" controls></video>
+        </div>
+        <div class="item4">
+          <!-- give the example that what should user to do -->
+          <video width="320" height="2" id="example2">
+            <source src="movie.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+          </video>
+        </div>
+        <div class="item5">
+          <!-- the button start and stop -->
+          <button id="startButton">Start Recording</button>
+          <button id="stopButton" disabled>Stop Recording</button>
+        </div>
+      </div>
+      <script src="script.js"></script>
     </section>
 
-</body>
-</html>
+    <!-- display the result -->
+    <section id="section2">
+      <h1>Result based on video</h1>
+      <!-- display no result until it finished the recording -->
+      <div id="status">No result</div>
+    </section>
+
+
+    <script src="script.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+  </body>
+  </html>
