--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script scr="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="https://www.youtube.com/iframe_api"></script>
+  <script defer src =”asanacoach.py”></script>
+  <script defer src =Cam.py”></script>
+  <script defer src =ImageModel.py”></script>
 </head>
 
 <body>
@@ -27,6 +30,16 @@
   <section id="section1">
     <div>
       <h1 id="video_recording">Video Recording</h1>
+      <table>
+        <tr>
+          <td>
+            <h3 id="show_use_time">Pose Time: 0s</h3>
+          </td>
+          <td>
+            <h3 id="show_besy_time">Best: 0s</h3>
+          </td>
+        </tr>
+      </table>
       <div class="grid-container">
         <div class="item1">
           <!-- taking video -->
@@ -44,27 +57,27 @@
           <!-- give the example that what should user to do -->
           <video width="320" height="2" id="example2">
             <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-          </video>
-        </div>
-        <div class="item5">
-          <!-- the button start and stop -->
-          <button id="startButton">Start Recording</button>
-          <button id="stopButton" disabled>Stop Recording</button>
-        </div>
-      </div>
-      <script src="script.js"></script>
-    </section>
+              <source src="movie.ogg" type="video/ogg">
+              </video>
+            </div>
+            <div class="item5">
+              <!-- the button start and stop -->
+              <button id="startButton">Start Recording</button>
+              <button id="stopButton" disabled>Stop Recording</button>
+            </div>
+          </div>
+          <script src="script.js"></script>
+        </section>
 
-    <!-- display the result -->
-    <section id="section2">
-      <h1>Result based on video</h1>
-      <!-- display no result until it finished the recording -->
-      <div id="status">No result</div>
-    </section>
+        <!-- display the result -->
+        <section id="section2">
+          <h1>Result based on video</h1>
+          <!-- display no result until it finished the recording -->
+          <div id="status">No result</div>
+        </section>
 
 
-    <script src="script.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
-  </body>
-  </html>
+        <script src="script.js"></script>
+        <script src="https://www.youtube.com/iframe_api"></script>
+      </body>
+      </html>
