Changes to init.py

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Login Page</title>
 </head>
 <body>
-  <form action="start.html" method="get">
+  <form action="/start/" method="get">
     <div>
       <label for="Username">Username: </label>
       <input type="text" name="Username" id="Username" placeholder="Give your Name" required>
