Some chnges with the text in the right side for the realtime result

--- a/work.html
+++ b/work.html
@@ -23,10 +23,10 @@
       <ul>
         <!-- the item in the top and if the user click the words, it will take the user to the currect position -->
         <li><a href="#section1">Video</a></li>
-        <li><a href="#section2">result</a></li>
-        <li><a href="#section3">Section 3: </a></li>
-        <li><a href="#section4">Section 4: </a></li>
-        <li><a href="#section5">Section 5: </a></li>
+        <li><a href="#section2">Results</a></li>
+        <li><a href="#section3">About </a></li>
+        <!-- <li><a href="#section4">Section 4: </a></li>
+        <li><a href="#section5">Section 5: </a></li> -->
       </ul>
     </nav>
   </div>
@@ -62,7 +62,6 @@
         <div class="item4">
           <!-- give the example that what should user to do -->
           <video width="320" height="2" id="example2">
-            <source src="movie.mp4" type="video/mp4">
               <source src="movie.ogg" type="video/ogg">
               </video>
             </div>
@@ -83,7 +82,7 @@
         </section>
 
 
-        <script src="script.js"></script>
+        <script src="posenet.js"></script>
         <script src="https://www.youtube.com/iframe_api"></script>
       </body>
       </html>
