Commit the frontend changes

--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
   <link rel="stylesheet" href="login_style.css">
   <title>Login Page</title>
 </head>
+
+
+
 <body>
   <form action="/start/" method="get">
     <div>
       <label for="Username">Username: </label>
-      <input type="text" name="Username" id="Username" placeholder="Give your Name" required>
+      <input type="text" name="Username" id="Username" placeholder="Enter your Username" required>
     </div>
     <div>
       <label for="password">Password: </label>
-      <input type="text" name="password" id="password" placeholder="Give your password" required>
+      <input type="text" name="password" id="password" placeholder="Enter your Password" required>
     </div>
-    <input class="button" type="submit" style="margin: 20px"></input>
+
+
+
+
+    <input class="button"  id ="button" type="submit" style="margin: 20px"></input>
   </form>
 </body>
 </html>
