--- a/work.html
+++ b/work.html
@@ -10,6 +10,25 @@
   <script defer src =”asanacoach.py”></script>
   <script defer src =Cam.py”></script>
   <script defer src =ImageModel.py”></script>
+  <style>
+  .button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+  }
+
+  .button:hover {
+    background-color: #2980b9;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  </style>
 </head>
 
 <body>
@@ -47,7 +66,8 @@
         </div>
         <div class="item2">
           <!-- give the example that what should user to do -->
-          <iframe id="video1" width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0"></iframe>
+          <div id="selectedValue1">
+          </div>
         </div>
         <div class="item3">
           <!-- the video that the user recorded -->
@@ -55,29 +75,27 @@
         </div>
         <div class="item4">
           <!-- give the example that what should user to do -->
-          <video width="320" height="2" id="example2">
-            <source src="movie.mp4" type="video/mp4">
-              <source src="movie.ogg" type="video/ogg">
-              </video>
-            </div>
-            <div class="item5">
-              <!-- the button start and stop -->
-              <button id="startButton">Start Recording</button>
-              <button id="stopButton" disabled>Stop Recording</button>
-            </div>
+          <div id="selectedValue2">
           </div>
-          <script src="script.js"></script>
-        </section>
+        </div>
+        <div class="item5">
+          <!-- the button start and stop -->
+          <button class="button" id="startButton">Start Recording</button>
+          <button class="button" id="stopButton" disabled>Stop Recording</button>
+        </div>
+      </div>
+      <script src="script.js"></script>
+    </section>
 
-        <!-- display the result -->
-        <section id="section2">
-          <h1>Result based on video</h1>
-          <!-- display no result until it finished the recording -->
-          <div id="status">No result</div>
-        </section>
+    <!-- display the result -->
+    <section id="section2">
+      <h1>Result based on video</h1>
+      <!-- display no result until it finished the recording -->
+      <div id="status">No result</div>
+    </section>
 
 
-        <script src="script.js"></script>
-        <script src="https://www.youtube.com/iframe_api"></script>
-      </body>
-      </html>
+    <script src="script.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+  </body>
+  </html>
